--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>716 Dips</title>
 </head>
-<body>
+<body style="background-color: #000000; text-align: center">
 <img src="img/logo.jpg">
 </body>
 </html>
