--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>716 Dips</title>
+    <script src='js/bootstrap.min.js' type='text/javascript'></script>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #000000; text-align: center">
 <img src="img/logo.jpg">
