fixed many things need individual pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <!-- NAVBAR
 ================================================== -->
-<body>
+<body><!--
 <div class="navbar-wrapper">
     <div class="container">
 
@@ -64,7 +64,7 @@
                                 <li class="divider"></li>
                                 <li class="dropdown-header">Nav header</li>
                                 <li><a href="#">Separated link</a></li>
-                                <li><a href="#">One more separated link</a></li>-->
+                                <li><a href="#">One more separated link</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -73,7 +73,7 @@
         </div>
 
     </div>
-</div>
+</div>-->
 
 
 <!-- Carousel
@@ -90,9 +90,9 @@
             <img src="img/logo2.jpg" alt="First slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                    <h1>Take it from custom to <strong>'One of a kind'</strong></h1>
+                    <p>We can take any part and give it the look of 100's of airbrush hours for less time and less $$</p>
+                   <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
                 </div>
             </div>
         </div>
@@ -100,9 +100,9 @@
             <img src="img/bluewithwalkingdead3.jpg" alt="Second slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Another example headline.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    <h1>Not just automotive</h1>
+                    <p>The nature of hydrograhics means its value is felt everywhere. We can do anything from a <a href="img/greenwithclearcarbon.jpg" target="_blank">keychain</a> to your <a href="img/bluewithspongebob2.jpg" target="_blank">favorite bottle</a>! If it can fit in the tank it can be dipped!</p>
+                    <p><a class="btn btn-lg btn-primary" href="http://www.facebook.com/716dips" target="_blank" role="button">Learn more</a></p>
                 </div>
             </div>
         </div>
@@ -110,9 +110,9 @@
             <img src="img/whitewithstickerbombvalvecover.jpg" alt="Third slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>One more for good measure.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                    <h1>Small company big values</h1>
+                    <p>We are a small company and because of that we are willing and able to make your pieces just what you want. If you don't see a design you like, <a href="mailto:716dips@gmail.com">email us</a> with your ideas and we will let you know how we can make it come true.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#" onclick="alert('Sorry we are still getting the gallery up. Please check us out at http://facebook.com\/716dips')" role="button">Browse gallery</a></p>
                 </div>
             </div>
         </div>
@@ -197,7 +197,6 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2014 716Dips, Inc.<!-- &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>--></p>
     </footer>
 
