updated circle images with dipped items

--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
         <div class="col-lg-4">
-            <img class="img-circle" src="img/7.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <img class="img-circle" src="img/whitewithstickerbombenginebay.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <h2>Services</h2>
             <p>Premium hydro graphics, water transfer printing, hydro dipping. Whatever you want to call it, we do it. This is <em>not</em> the same as chroming it is more similar to painting or airbrushing. If you have any questions please contact us.</p>
             <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> <!-- hidden untill services page is made -->
         </div>
         <div class="col-lg-4">
-            <img class="img-circle" src="img/1.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <img class="img-circle" src="img/whitewithskullsandroses2.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <h2>Pricing</h2>
             <p><a href="img/PriceSheet.jpg" target="_blank">Click here</a> for our price sheet.*<br/><br/>*All prices are approximate and depend on the complexity of the part being dipped and the design chosen.</p>
             <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> <!-- hidden untill about page is made -->
         </div>
         <div class="col-lg-4">
-            <img class="img-circle" src="img/6.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+            <img class="img-circle" src="img/pinkwithzebra.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
             <h2>Contact</h2>
             <p>You can reach us via the following:<br/>
                 <ul class="text-left">
