added photo gallery

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li><!--
+                        <li class="active"><a href="#">Home</a></li>
+                        <li class=""><a href="gallery.html">Photo Gallery</a></li><!--
                         <li><a href="#services">Services</a></li>
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -97,7 +98,7 @@
             <img src="img/logo2.jpg" alt="First slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Take it from custom to <strong>'One of a kind'</strong></h1>
+                    <h1>Take it from mild to <strong>Wild</strong>, ordinary to <strong>Extraordinary</strong>!!!</h1>
                     <p>We can take any part and give it the look of 100's of airbrush hours for less time and less $$</p>
                    <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>-->
                 </div>
