fixed gallery button on index

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="carousel-caption">
                     <h1>Small company big values</h1>
                     <p>We are a small company and because of that we are willing and able to make your pieces just what you want. If you don't see a design you like, <a href="mailto:716dips@gmail.com">email us</a> with your ideas and we will let you know how we can make it come true.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" onclick="alert('Sorry we are still getting the gallery up. Please check us out at http://facebook.com\/716dips')" role="button">Browse gallery</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="gallery.html" role="button">Browse gallery</a></p>
                 </div>
             </div>
         </div>
