rotated lightbluewithskulls and used thumbnails

--- a/gallery.html
+++ b/gallery.html
@@ -126,124 +126,124 @@
 </div>
 <div id="links">
     <a href="img/bluewithspongebob.jpg" title="Blue with sponge bob" data-gallery>
-        <img src="img/bluewithspongebob.jpg" alt="Blue with sponge bob">
+        <img src="img/thumbnails/tn_bluewithspongebob.jpg" alt="Blue with sponge bob">
     </a>
     <a href="img/bluewithspongebob.jpg" title="img/bluewithspongebob.jpg" data-gallery>
-        <img src="img/bluewithspongebob.jpg"/>
+        <img src="img/thumbnails/tn_bluewithspongebob.jpg"/>
     </a>
     <a href="img/bluewithspongebob2.jpg" title="img/bluewithspongebob2.jpg" data-gallery>
-        <img src="img/bluewithspongebob2.jpg"/>
+        <img src="img/thumbnails/tn_bluewithspongebob2.jpg"/>
     </a>
     <a href="img/bluewithwalkingdead.jpg" title="img/bluewithwalkingdead.jpg" data-gallery>
-        <img src="img/bluewithwalkingdead.jpg"/>
+        <img src="img/thumbnails/tn_bluewithwalkingdead.jpg"/>
 	</a>
     <a href="img/bluewithwalkingdead2.jpg" title="img/bluewithwalkingdead2.jpg" data-gallery>
-        <img src="img/bluewithwalkingdead2.jpg"/>
+        <img src="img/thumbnails/tn_bluewithwalkingdead2.jpg"/>
 	</a>
     <a href="img/bluewithwalkingdead3.jpg" title="img/bluewithwalkingdead3.jpg" data-gallery>
-        <img src="img/bluewithwalkingdead3.jpg"/>
+        <img src="img/thumbnails/tn_bluewithwalkingdead3.jpg"/>
 	</a>
     <a href="img/glowinthedarkwithwildstyle.png" title="img/glowinthedarkwithwildstyle.png" data-gallery>
-        <img src="img/glowinthedarkwithwildstyle.png"/>
+        <img src="img/thumbnails/tn_glowinthedarkwithwildstyle.png"/>
 	</a>
     <a href="img/glowinthedarkwithwildstyle2.png" title="img/glowinthedarkwithwildstyle2.png" data-gallery>
-        <img src="img/glowinthedarkwithwildstyle2.png"/>
+        <img src="img/thumbnails/tn_glowinthedarkwithwildstyle2.png"/>
 	</a>
     <a href="img/greenwithclearcarbon.jpg" title="img/greenwithclearcarbon.jpg" data-gallery>
-        <img src="img/greenwithclearcarbon.jpg"/>
+        <img src="img/thumbnails/tn_greenwithclearcarbon.jpg"/>
 	</a>
     <a href="img/greenwithclearcarbon2.jpg" title="img/greenwithclearcarbon2.jpg" data-gallery>
-        <img src="img/greenwithclearcarbon2.jpg"/>
+        <img src="img/thumbnails/tn_greenwithclearcarbon2.jpg"/>
 	</a>
     <a href="img/lightbluewithskulls.jpg" title="img/lightbluewithskulls.jpg" data-gallery>
-        <img src="img/lightbluewithskulls.jpg"/>
+        <img src="img/thumbnails/tn_lightbluewithskulls.jpg"/>
 	</a>
     <a href="img/metalicbluewithflameskulls.jpg" title="img/metalicbluewithflameskulls.jpg" data-gallery>
-        <img src="img/metalicbluewithflameskulls.jpg"/>
+        <img src="img/thumbnails/tn_metalicbluewithflameskulls.jpg"/>
 	</a>
     <a href="img/metalicbluewithflameskulls2.jpg" title="img/metalicbluewithflameskulls2.jpg" data-gallery>
-        <img src="img/metalicbluewithflameskulls2.jpg"/>
+        <img src="img/thumbnails/tn_metalicbluewithflameskulls2.jpg"/>
 	</a>
     <a href="img/metalicbluewithflameskulls3.jpg" title="img/metalicbluewithflameskulls3.jpg" data-gallery>
-        <img src="img/metalicbluewithflameskulls3.jpg"/>
+        <img src="img/thumbnails/tn_metalicbluewithflameskulls3.jpg"/>
 	</a>
     <a href="img/metalicbluewithflameskulls4.jpg" title="img/metalicbluewithflameskulls4.jpg" data-gallery>
-        <img src="img/metalicbluewithflameskulls4.jpg"/>
+        <img src="img/thumbnails/tn_metalicbluewithflameskulls4.jpg"/>
 	</a>
     <a href="img/metalicbluewithflameskulls5.png" title="img/metalicbluewithflameskulls5.png" data-gallery>
-        <img src="img/metalicbluewithflameskulls5.png"/>
+        <img src="img/thumbnails/tn_metalicbluewithflameskulls5.png"/>
 	</a>
     <a href="img/orangewithsnakeskin.jpg" title="img/orangewithsnakeskin.jpg" data-gallery>
-        <img src="img/orangewithsnakeskin.jpg"/>
+        <img src="img/thumbnails/tn_orangewithsnakeskin.jpg"/>
 	</a>
     <a href="img/orangewithsnakeskin2.jpg" title="img/orangewithsnakeskin2.jpg" data-gallery>
-        <img src="img/orangewithsnakeskin2.jpg"/>
+        <img src="img/thumbnails/tn_orangewithsnakeskin2.jpg"/>
 	</a>
     <a href="img/pinkwithzebra.png" title="img/pinkwithzebra.png" data-gallery>
-        <img src="img/pinkwithzebra.png"/>
+        <img src="img/thumbnails/tn_pinkwithzebra.png"/>
 	</a>
     <a href="img/redwithzombies.jpg" title="img/redwithzombies.jpg" data-gallery>
-		<img src="img/redwithzombies.jpg"/>
+		<img src="img/thumbnails/tn_redwithzombies.jpg"/>
 	</a>
     <a href="img/silverwithblueflames.jpg" title="img/silverwithblueflames.jpg" data-gallery>
-		<img src="img/silverwithblueflames.jpg"/>
+		<img src="img/thumbnails/tn_silverwithblueflames.jpg"/>
 	</a>
     <a href="img/silverwithpebble_whitewithcheetah.jpg" title="img/silverwithpebble_whitewithcheetah.jpg" data-gallery>
-		<img src="img/silverwithpebble_whitewithcheetah.jpg"/>
+		<img src="img/thumbnails/tn_silverwithpebble_whitewithcheetah.jpg"/>
 	</a>
     <a href="img/whitewithcreepyclowns.jpg" title="img/whitewithcreepyclowns.jpg" data-gallery>
-		<img src="img/whitewithcreepyclowns.jpg"/>
+		<img src="img/thumbnails/tn_whitewithcreepyclowns.jpg"/>
 	</a>
     <a href="img/whitewithcreepyclowns2.jpg" title="img/whitewithcreepyclowns2.jpg" data-gallery>
-		<img src="img/whitewithcreepyclowns2.jpg"/>
+		<img src="img/thumbnails/tn_whitewithcreepyclowns2.jpg"/>
 	</a>
     <a href="img/whitewithcreepyclownsenginecover.jpg" title="img/whitewithcreepyclownsenginecover.jpg" data-gallery>
-		<img src="img/whitewithcreepyclownsenginecover.jpg"/>
+		<img src="img/thumbnails/tn_whitewithcreepyclownsenginecover.jpg"/>
 	</a>
     <a href="img/whitewithcreepyclownsenginecover2.png" title="img/whitewithcreepyclownsenginecover2.png" data-gallery>
-		<img src="img/whitewithcreepyclownsenginecover2.png"/>
+		<img src="img/thumbnails/tn_whitewithcreepyclownsenginecover2.png"/>
 	</a>
     <a href="img/whitewithhellokitty.png" title="img/whitewithhellokitty.png" data-gallery>
-		<img src="img/whitewithhellokitty.png"/>
+		<img src="img/thumbnails/tn_whitewithhellokitty.png"/>
 	</a>
     <a href="img/whitewithrealcamo.jpg" title="img/whitewithrealcamo.jpg" data-gallery>
-		<img src="img/whitewithrealcamo.jpg"/>
+		<img src="img/thumbnails/tn_whitewithrealcamo.jpg"/>
 	</a>
     <a href="img/whitewithrealcamo2.jpg" title="img/whitewithrealcamo2.jpg" data-gallery>
-		<img src="img/whitewithrealcamo2.jpg"/>
+		<img src="img/thumbnails/tn_whitewithrealcamo2.jpg"/>
 	</a>
     <a href="img/whitewithrealcamo3.jpg" title="img/whitewithrealcamo3.jpg" data-gallery>
-		<img src="img/whitewithrealcamo3.jpg"/>
+		<img src="img/thumbnails/tn_whitewithrealcamo3.jpg"/>
 	</a>
     <a href="img/whitewithskullsandroses.jpg" title="img/whitewithskullsandroses.jpg" data-gallery>
-		<img src="img/whitewithskullsandroses.jpg"/>
+		<img src="img/thumbnails/tn_whitewithskullsandroses.jpg"/>
 	</a>
     <a href="img/whitewithskullsandroses2.jpg" title="img/whitewithskullsandroses2.jpg" data-gallery>
-		<img src="img/whitewithskullsandroses2.jpg"/>
+		<img src="img/thumbnails/tn_whitewithskullsandroses2.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombenginebay.jpg" title="img/whitewithstickerbombenginebay.jpg" data-gallery>
-		<img src="img/whitewithstickerbombenginebay.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombenginebay.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombenginebay2.jpg" title="img/whitewithstickerbombenginebay2.jpg" data-gallery>
-		<img src="img/whitewithstickerbombenginebay2.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombenginebay2.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombintake.jpg" title="img/whitewithstickerbombintake.jpg" data-gallery>
-		<img src="img/whitewithstickerbombintake.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombintake.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombintake2.jpg" title="img/whitewithstickerbombintake2.jpg" data-gallery>
-		<img src="img/whitewithstickerbombintake2.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombintake2.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombintake3.jpg" title="img/whitewithstickerbombintake3.jpg" data-gallery>
-		<img src="img/whitewithstickerbombintake3.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombintake3.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombintake4.jpg" title="img/whitewithstickerbombintake4.jpg" data-gallery>
-		<img src="img/whitewithstickerbombintake4.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombintake4.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombstrutbar.jpg" title="img/whitewithstickerbombstrutbar.jpg" data-gallery>
-		<img src="img/whitewithstickerbombstrutbar.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombstrutbar.jpg"/>
 	</a>
     <a href="img/whitewithstickerbombvalvecover.jpg" title="img/whitewithstickerbombvalvecover.jpg" data-gallery>
-		<img src="img/whitewithstickerbombvalvecover.jpg"/>
+		<img src="img/thumbnails/tn_whitewithstickerbombvalvecover.jpg"/>
 	</a>
 </div>
 
