fixed social network spot and added twitter and instagram

--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
                 <ul class="text-left">
                     <li>Phone: 716-236-8347</li>
                     <li>Email: <a href="mailto:716dips@gmail.com">716dips@gmail.com</a></li>
-                    <li>Facebook: <a href="http://www.716dips.com">facebook.com/716dips</a></li>
+                    <li>Facebook: <a href="http://www.facebook.com/716dips">facebook.com/716dips</a></li>
+                    <li>Twitter: <a href="http://www.twitter.com/716dips">@716dips</a></li>
+                    <li>Instagram: <a href="http://www.instagram.com/716dips">instagram.com/716dips</a></li>
                 </ul>
             </p>
             <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p><!-- hidden until contact page is made -->
